--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -15,3 +15,7 @@ sille_bille:
   name: Dinesh Prasanth Moluguwan Krishnamoorthy
   twitter: dinesh_MKD
   url: https://github.com/SilleBille/
+
+bikexs:
+  name: 栢晓笙
+  url: https://github.com/bikexs/
