--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jekyll-theme-chirpy",
+  "name": "bikexs_github_page",
   "version": "5.6.1",
-  "description": "A minimal, responsive and feature-rich Jekyll theme for technical writing.",
+  "description": "基于Jekyll theme进行改造",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cotes2020/jekyll-theme-chirpy.git"
